@@ -1,7 +1,16 @@
 2001-07-31  Yuuichi Teranishi  <teranisi@gohome.org>
 
+	* w3m-form.el (w3m-form-submit): Set `referer' argument of
+	w3m-goto-url.
+
 	* w3m.el (w3m-w3m-retrieve): Make a temporary file for POST;
 	Use -header option to specify Content-Type: field.
+	(w3m-w3m-retrieve): Added argument `referer';
+	Add -header option to specify Referer: field.
+	(w3m-retrieve): Added argument `referer'.
+	(w3m-exec): Ditto.
+	(w3m-goto-url): Ditto.
+	(w3m-view-this-url): Set `referer' argument of w3m-goto-url.
 
 2001-07-27  Katsumi Yamaoka  <yamaoka@jpl.org>
 
